--- a/package.json
+++ b/package.json
@@ -4,20 +4,34 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.15.1",
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@googlemaps/typescript-guards": "^2.0.3",
     "@next/font": "13.0.7",
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@ubilabs/google-maps-react-hooks": "^2.0.2",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "fast-equals": "^4.0.3",
+    "firebase": "^9.15.0",
     "next": "13.0.7",
+    "postcss": "^8.4.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.0.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/google.maps": "^3.51.0",
+    "module-name": "^0.0.1-security"
   }
 }
